# libacidcam

./: CMakeLists.txt  Config.cmake.in  Makefile  Makefile.am  Makefile.linux  Makefile.macos  README.md  acidcam-config.cmake  acidcam.pc.in  config.h  configure.ac
android/: README_FIRST.txt
android/java/com/lostsidedead/acidcam/: AcidCam_Filter.java
android/jni/: AcidCam.cpp  Android.mk  Application.mk  ac-filtercat.h  ac.h  com_lostsidedead_acidcam_AcidCam_Filter.h
deb/libacidcam/DEBIAN/: control
examples/: CMakeLists.txt  README.md  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example_char.cpp  gen-html.cpp  memory_error.cpp  memory_error2.cpp  print-codec.cpp  selfie.cpp
scripts/: compile.sh
source/: Makefile.am  Makefile.in  ac-alpha.cpp  ac-basic.cpp  ac-filter-new.cpp  ac-filter1.cpp  ac-filter10.cpp  ac-filter11.cpp  ac-filter13.cpp  ac-filter19.cpp  ac-filter2.cpp  ac-filter20.cpp  ac-filter22.cpp  ac-filter23.cpp  ac-filter24.cpp  ac-filter26.cpp  ac-filter29.cpp  ac-filter3.cpp  ac-filter34.cpp  ac-filter36.cpp  ac-filter37.cpp  ac-filter38.cpp  ac-filter39.cpp  ac-filter40.cpp  ac-filter41.cpp  ac-filter42.cpp  ac-filter43.cpp  ac-filter45.cpp  ac-filter46.cpp  ac-filter47.cpp  ac-filter48.cpp  ac-filter49.cpp  ac-filter5.cpp  ac-filter50.cpp  ac-filter7.cpp  ac-filter9.cpp  ac-filtercat.cpp  ac-image.cpp  ac-particle.cpp  ac-square.cpp  (+3 more)
tests/: CMakeLists.txt  test-filter-ex.cpp  test-filters.cpp  test-image-filters.cpp  test-subfilter.cpp
