

if(ENABLE_EXAMPLES)
	add_executable(example1 ${CMAKE_SOURCE_DIR}/examples/example1.cpp)
	target_link_libraries(example1 acidcam Threads::Threads)
	target_compile_options(example1 PRIVATE ${COMPILER_FLAGS})
	add_executable(example2 ${CMAKE_SOURCE_DIR}/examples/example2.cpp)
	target_link_libraries(example2 acidcam Threads::Threads)
	target_compile_options(example2 PRIVATE ${COMPILER_FLAGS})
	add_executable(example3 ${CMAKE_SOURCE_DIR}/examples/example3.cpp)
	target_link_libraries(example3 acidcam Threads::Threads)
	target_compile_options(example3 PRIVATE ${COMPILER_FLAGS})
	add_executable(example4 ${CMAKE_SOURCE_DIR}/examples/example4.cpp)
	target_link_libraries(example4 acidcam Threads::Threads)
	target_compile_options(example4 PRIVATE ${COMPILER_FLAGS})
	add_executable(example5 ${CMAKE_SOURCE_DIR}/examples/example5.cpp)
	target_link_libraries(example5 acidcam Threads::Threads)
	target_compile_options(example5 PRIVATE ${COMPILER_FLAGS})
endif()
